# inquisition

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  ROADMAP_ATTACK_NARRATIVE.md  ROADMAP_CODE_REVIEW.md  active_scan.py  analysis_kb.py  attack_graph.py  attack_rules.py  audit.py  diffing.py  fix_script.py  fleet_config.py  fleet_correlation.py  inquisition  inquisition.py  metrics.py  metrics_server.py  mitre.py  models.py  notifications.py  poc_validation.py  provenance.py  pyproject.toml  reachability.py  report.py  requirements.txt  safety.py  scanner.py  tls_chain.py  ui.py  vuln_correlation.py
.github/workflows/: ci.yml  docker-publish.yml
examples/: docker-compose.yml  fleet.json  fleet.yaml  github-action.yml  grafana-dashboard.json  inquisition.rules.yml  prometheus.yml
inquisition/: __init__.py  cli.py  report.py  safety.py  scanner.py  vuln_correlation.py
inquisition/modules/: __init__.py  app_checks.py  base.py  dns_recon.py  http_headers.py  port_scan.py  tech_stack.py  tls_analysis.py
modules/: __init__.py  app_checks.py  base.py  content_discovery.py  crawler.py  dns_recon.py  http_client.py  http_headers.py  port_scan.py  security_grading.py  tech_stack.py  tls_analysis.py  waf_detection.py
modules/data/: analysis_kb.json  attack_chains.yaml  misconfig_rules.yaml
report/: __init__.py  fleet.py  html.py  markdown.py  scoring.py  serialize.py  text.py
tests/: test_active_scan.py  test_analysis_kb.py  test_attack_graph.py  test_attack_rules.py  test_audit.py  test_cli.py  test_confidence.py  test_crawler.py  test_diffing.py  test_dry_run_modules.py  test_fix_script.py  test_fleet_config.py  test_fleet_correlation.py  test_http_client.py  test_metrics.py  test_metrics_server.py  test_mitre.py  test_models_report.py  test_modules.py  test_notifications.py  test_poc_validation.py  test_provenance.py  test_reachability.py  test_recorded_network_fixtures.py  test_sarif.py  test_scanner.py  test_security_grading.py  test_tls_analysis.py  test_tls_chain.py  test_vuln_correlation.py
