[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inquisition"
version = "0.1.0"
description = "Website fingerprinting and security reconnaissance tool"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "dnspython>=2.4",
]

[project.scripts]
inquisition = "inquisition:main"

[tool.mypy]
python_version = "3.10"
strict = true
