[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inquisition"
version = "0.1.0"
description = "Website fingerprinting and security reconnaissance tool"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "dnspython>=2.4",
    "rich>=13.0",
]

[tool.setuptools]
py-modules = ["inquisition", "scanner", "report", "models", "safety", "analysis_kb", "vuln_correlation", "ui"]

[tool.setuptools.packages.find]
include = ["modules*"]
exclude = ["reports", "tests"]

[tool.setuptools.package-data]
modules = ["data/*.json"]

[project.scripts]
inquisition = "inquisition:main"

[tool.mypy]
python_version = "3.10"
strict = true
# Third-party stub availability (e.g. types-requests) varies across environments.
# Keep the `# type: ignore[import-untyped]` comments valid whether or not stubs
# are installed, instead of failing when an environment happens to have them.
warn_unused_ignores = false
